--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/forum5
+spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
 spring.datasource.password=phat
 
