--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 server.port=8085
+
+#Configure the file size to be uploaded
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
