Nguyên cập nhật medicine Controller Repository Entity Service

--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=phat
+spring.datasource.password=nguyen
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
