upload part manager admin

--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#security
+secret_key=11111111111111111111
+#expire 24x7
+expire_time=604800000
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
 spring.datasource.password=phat
@@ -11,3 +16,4 @@ server.port=8085
 #Configure the file size to be uploaded
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
