--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -122,6 +122,11 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
 		<!-- import and handle file csv -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
