--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -3,9 +3,13 @@ secret_key=11111111111111111111
 #expire 24x7
 expire_time=604800000
 
+jwt.secret=javainuse
+jwt.get.token.uri=/authenticate
+jwt.token.expiration.in.seconds=604800
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=hung
+spring.datasource.password=nguyen
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
