--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -5,7 +5,7 @@ expire_time=604800000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=phat
+spring.datasource.password=2606
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
