--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -130,6 +130,14 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.8</version>
 		</dependency>
+		
+		<!-- Custom annotation to Notification -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.6.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
