--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+#security
+secret_key=11111111111111111111
+#expire 24x7
+expire_time=604800000
+
+jwt.secret=javainuse
+jwt.get.token.uri=/authenticate
+jwt.token.expiration.in.seconds=604800
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
 spring.datasource.password=nguyen
@@ -7,3 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 server.port=8085
+
+#Configure the file size to be uploaded
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
