--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jwt.token.expiration.in.seconds=604800
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=nguyen
+spring.datasource.password=phat
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
