--- a/forum/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/forum/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,20 @@
     "name": "secret_key",
     "type": "java.lang.String",
     "description": "A description for 'secret_key'"
+  },
+  {
+    "name": "jwt.secret",
+    "type": "java.lang.String",
+    "description": "A description for 'jwt.secret'"
+  },
+  {
+    "name": "jwt.get.token.uri",
+    "type": "java.lang.String",
+    "description": "A description for 'jwt.get.token.uri'"
+  },
+  {
+    "name": "jwt.token.expiration.in.seconds",
+    "type": "java.lang.String",
+    "description": "A description for 'jwt.token.expiration.in.seconds'"
   }
 ]}
