--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -159,6 +159,14 @@
 		</dependency>
 		<!--  -->
 		
+		<!-- BASE 64 -->
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.4</version>
+</dependency>
+		
 		
 	</dependencies>
 
@@ -172,7 +180,7 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-						</exclude>
+					dependencylude>
 					</excludes>
 				</configuration>
 			</plugin>
