--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -9,7 +9,11 @@ jwt.token.expiration.in.seconds=604800
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=phat
+spring.datasource.password=hung
+
+#Flyway
+spring.flyway.locations=classpath:db-migration
+spring.flyway.baselineOnMigrate = true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
