--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jwt.token.expiration.in.seconds=604800
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=hung
+spring.datasource.password=phat
 
 #Flyway
 spring.flyway.locations=classpath:db-migration
