--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -172,6 +172,28 @@
 			<version>2.1.0</version>
 		</dependency>
 		<!--// export error when validate on @param -->
+
+		<!-- Swagger 2 -->
+		<!-- <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency> -->
+		<!--// Swagger 2 -->
+		
+		<!--  FilenameUtils.getExtension  get part extension-->
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.11.0</version>
+</dependency>
+			<!--//  FilenameUtils.getExtension  get part extension-->
 	</dependencies>
 
 	<build>
