--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -189,8 +189,18 @@
     <version>2.11.0</version>
 </dependency>
 			<!--//  FilenameUtils.getExtension  get part extension-->
+			
+			<!-- BCryptPasswordEncoder  -->
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+<!-- <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-crypto</artifactId>
+    <version>5.6.1</version>
+</dependency>
+			 -->
+			<!--// BCryptPasswordEncoder  -->
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
