--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -9,11 +9,13 @@ jwt.token.expiration.in.seconds=604800
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forum
 spring.datasource.username=postgres
-spring.datasource.password=phat
+spring.datasource.password=hung
 
 #Flyway
 spring.flyway.locations=classpath:db-migration
 spring.flyway.baselineOnMigrate = true
+#Swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
