--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -188,17 +188,15 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
 </dependency>
-			<!--//  FilenameUtils.getExtension  get part extension-->
+
 			
-			<!-- BCryptPasswordEncoder  -->
-			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
-<!-- <dependency>
-    <groupId>org.springframework.security</groupId>
-    <artifactId>spring-security-crypto</artifactId>
-    <version>5.6.1</version>
-</dependency>
-			 -->
-			<!--// BCryptPasswordEncoder  -->
+			<!-- export error when validate on @param -->
+		<dependency>
+			<groupId>io.github.wimdeblauwe</groupId>
+			<artifactId>error-handling-spring-boot-starter</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<!--// export error when validate on @param -->
 	</dependencies>
 	
 	<build>
