mở lại log4j2, file log4j2 hiển thị lỗi thành ErrorFile

--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -233,7 +233,7 @@
 					<driver>org.hibernate.dialect.PostgreSQL81Dialect</driver>
 					<url>jdbc:postgresql://localhost:5432/forum?currentSchema=public</url>
 					<user>postgres</user>
-					<password>phat</password>
+					<password>hung</password>
 				</configuration>
 			</plugin>
 
